--- a/main.css
+++ b/main.css
@@ -1,18 +1,20 @@
 body {
-  margin: 0;
+  margin: 20px;
   padding: 0;
   box-sizing: border-box;
+  background-color: lightseagreen;
+  
 }
 
 .board {
-  display: block;
+  display: inline-block;
   margin: auto;
   width: 332px;
-  height: 360px;
-  background-color: rgba(15, 139, 21, 0.4);
+  height: 362px;
+  background-color: rgba(0, 65, 185, 0.418);
   overflow: hidden;
   z-index: 1;
-  border-radius: 5px;
+  border-radius: 50px;
   box-shadow: 0px 10px 10px;
 }
 
@@ -25,13 +27,13 @@ body {
   text-align: center;
   font-size: 60px;
   padding-top: 30px;
-  cursor: pointer;
-  font-family: sans-serif;
-  transition: background 0.3s;
+  cursor: crosshair;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  transition: background 0.5s;
 }
 
 .sq:hover {
-  background: rgba(255, 255, 255, 0.4);
+  background: rgb(0, 253, 84);
 }
 
 .bottom {
